# MARS-Volleyball-League-Management-Application

./: LICENSE  README.md  package-lock.json
team-mars-backend/: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yaml  uvicorn.out
team-mars-backend/alembic/: env.py
team-mars-backend/constants/: logger.py  settings.py  supabase_client.py
team-mars-backend/controller/: health_check.py  league_controller.py  match_controller.py  match_team_stats_controller.py  player_controller.py  skill_level_controller.py  team_controller.py  team_generator_controller.py  team_player_controller.py
team-mars-backend/core/: dependencies.py  exceptions.py
team-mars-backend/database/: config.py
team-mars-backend/migrations/: env.py
team-mars-backend/migrations/versions/: 0eac67be5f8e_generate_initial_migration.py  14f089d20272_2nd_migration_removed_admin_table.py  19fb899eac1e_add_skill_level_to_player_model_instead_.py  2acece205083_add_cascade_delete_to_league_.py  5935d9c175a8_add_skill_level_to_player_model_v2.py  6011d4f7745b_add_ondelete_cascade_on_match_team_.py  72f35915fb5f_replace_skill_notes_with_notes.py  9006cbfc278e_remove_delete_orphan_on_team_player_.py  (+7 more)
team-mars-backend/model/: __init__.py  enums.py
team-mars-backend/repository/: __init__.py  database.py  league_repository.py  match_repository.py  match_team_stats_repository.py  player_repository.py  skill_level_repository.py  team_generator_repository.py  team_player_repository.py  team_repository.py
team-mars-backend/scripts/: test_connection.py
team-mars-backend/service/: team_generator_service.py
team-mars-backend/usecase/: league_use_case.py  league_usecase.py  match_team_stats_use_case.py  match_use_case.py  player_use_case.py  skill_level_use_case.py  team_generator_use_case.py  team_player_use_case.py  team_use_case.py
team-mars-backend/utils/: db.py
(+147 files in other folders)
