[project]
name = "Team_MARS"
version = "0.1.0"
description = "Test"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "python-dotenv",
    "pytest",
    "black",
    "ruff",
    "commitizen",
    "asyncpg",
    "email-validator",
    "greenlet",
    "mangum"
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
allow_untyped_defs = false
disallow_untyped_calls = true
no_implicit_optional = true
check_untyped_defs = true
strict = false
exclude = [
    '^.venv/',
    '.*/site-packages/',
    '^.serverless/',
]

[tool.ruff]
line-length = 120

indent-width = 4
target-version = "py311"


exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "pypackages",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".serverless",
]


[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "F403", "F401", "E402", "F841", "C901", "F722", "F405", "F811"]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]

unfixable = []

# ✅ Fixed regex (allows _ or _var as dummy names)
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
major_version_zero = true

